2014-02-15  vaiorabbit  <https://twitter.com/vaiorabbit>

	* sample/DebugOutput: Added.

2014-02-14  vaiorabbit  <https://twitter.com/vaiorabbit>

	* samples: Fixed Array#pack abuse to improve performance.

2014-02-09  vaiorabbit  <https://twitter.com/vaiorabbit>

	* sample/GLExcess/glxs_glut.rb : Added.

2014-02-08  vaiorabbit  <https://twitter.com/vaiorabbit>

	* README.md: Added links to freeglut.
	* sample/README.md: Updated.

2014-02-02  vaiorabbit  <https://twitter.com/vaiorabbit>

	* sample/simple_glut.rb: Added.
	* glut.rb: Fixed wrong glutTimerFunc signature.

2014-01-31  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2014-01-01  vaiorabbit  <https://twitter.com/vaiorabbit>

	* glut.rb: Now supports API Level 4 (GLUT_API_VERSION = 4).
	* generator : [BUGFIX] some enums aren't extracted correctly.
	* opengl_ext_common.rb : Added OpenGL.setup_extension_all().

2013-12-31  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2013-12-14  vaiorabbit  <https://twitter.com/vaiorabbit>

	* Updated using latest gl.xml.

2013-11-27  vaiorabbit  <https://twitter.com/vaiorabbit>

	* opengl_ext_command.rb, opengl_ext_enum.rb: Updated using latest gl.xml.

2013-11-02  vaiorabbit  <https://twitter.com/vaiorabbit>

	* opengl_es.rb: Aded OpenGL ES 2.0/3.0 support.
	* sample/GLES: Aded.
	* opengl_command.rb, opengl_ext_command.rb, opengl_ext_enum.rb: Updated using latest gl.xml.
	* generator/Rakefile: Supported new task 'clean'.

2013-10-20  vaiorabbit  <https://twitter.com/vaiorabbit>

	* glut.rb (:GLUTPassiveMotionFunc): Fixed signature definition (Thanks: Дмитрий Краснов).

2013-10-19  vaiorabbit  <https://twitter.com/vaiorabbit>

	* opengl_command.rb, opengl_ext_command.rb, opengl_ext_enum.rb: Updated using latest gl.xml.

2013-10-06  vaiorabbit  <https://twitter.com/vaiorabbit>

	* opengl_ext.rb (OpenGL.check_extension): Now compatible with OpenGL 3.0 and later (glGetString(GL_EXTENSIONS) was deprecated).
