@@ -1,3 +1,7 @@
+2014-02-17  vaiorabbit  <https://twitter.com/vaiorabbit>
+
+	* sample/GLUT/glut_gears.rb: Added.
+
 2014-02-15  vaiorabbit  <https://twitter.com/vaiorabbit>
 
 	* sample/DebugOutput: Added.
